add get product by categories