@@ -6,6 +6,7 @@ import com.example.apisample.category.model.dto.CategoryResponseDTO;
 import com.example.apisample.category.repository.CategoryRepository;
 import com.example.apisample.product.entity.Product;
 import com.example.apisample.product.exception.ProductNotFoundException;
+import com.example.apisample.product.model.dto.ProductResponseDTO;
 import com.example.apisample.product.repository.ProductRepository;
 import com.example.apisample.productcategory.entity.ProductCategory;
 import com.example.apisample.productcategory.entity.ProductCategoryId;
@@ -15,25 +16,29 @@ import com.example.apisample.productcategory.model.dto.ProductCategoryResponseDT
 import com.example.apisample.productcategory.model.mapper.ProductCategoryMapper;
 import com.example.apisample.productcategory.repository.ProductCategoryRepository;
 import com.example.apisample.productcategory.service.ProductCategoryService;
+import com.example.apisample.rating.service.RatingService;
 import com.example.apisample.utils.pagination.APIPageableResponseDTO;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
-
 
 @RequiredArgsConstructor
 @Service
 public class ProductCategoryServiceImpl implements ProductCategoryService {
+
     private final ProductCategoryRepository productCategoryRepository;
     private final ProductRepository productRepository;
     private final CategoryRepository categoryRepository;
+    private final RatingService ratingService;
+
+    private static final String SORTFIELD_PRICE = "price";
+    private static final String SORTFIELD_PRICE_DESC = "priceDesc";
+    private static final String SORTFIELD_RATING = "rating";
+    private static final String SORTFIELD_DEFAULT = "createOn";
 
     @Override
     @Transactional
@@ -41,28 +46,25 @@ public class ProductCategoryServiceImpl implements ProductCategoryService {
         Product product = productRepository.findById(requestDTO.getProductId())
                 .orElseThrow(ProductNotFoundException::new);
 
-        List<ProductCategory> productCategoryList = new ArrayList<>();
-        for(Integer categoryId : requestDTO.getCategoryId()) {
-            Category category = categoryRepository.findById(categoryId)
-                    .orElseThrow(CategoryNotFoundException::new);
+        List<ProductCategory> productCategories = requestDTO.getCategoryId().stream()
+                .map(categoryId -> {
+                    Category category = categoryRepository.findById(categoryId)
+                            .orElseThrow(CategoryNotFoundException::new);
+                    return ProductCategory.builder()
+                            .id(new ProductCategoryId(product.getId(), category.getId()))
+                            .product(product)
+                            .category(category)
+                            .build();
+                }).collect(Collectors.toList());
 
-            ProductCategory productCategory = ProductCategory.builder()
-                    .id(new ProductCategoryId(requestDTO.getProductId(), categoryId))
-                    .product(product)
-                    .category(category)
-                    .build();
-
-            productCategoryList.add(productCategory);
-        }
-
-        productCategoryRepository.saveAll(productCategoryList);
+        productCategoryRepository.saveAll(productCategories);
     }
 
     @Override
     @Transactional
     public void removeCategoryFromProduct(Integer productId, Integer categoryId) {
-        ProductCategoryId productCategoryId = new ProductCategoryId(productId, categoryId);
-        ProductCategory productCategory = productCategoryRepository.findById(productCategoryId)
+        ProductCategoryId id = new ProductCategoryId(productId, categoryId);
+        ProductCategory productCategory = productCategoryRepository.findById(id)
                 .orElseThrow(ProductCategoryNotFoundException::new);
 
         productCategoryRepository.delete(productCategory);
@@ -70,41 +72,57 @@ public class ProductCategoryServiceImpl implements ProductCategoryService {
 
     @Override
     @Transactional
-    public APIPageableResponseDTO<ProductCategoryResponseDTO> getAllProductCategories(int pageNo, int pageSize, String search, String sort) {
+    public APIPageableResponseDTO<ProductCategoryResponseDTO> getAllProductCategories(int pageNo, int pageSize, String sort, String search) {
         Pageable pageable = createPageable(pageNo, pageSize, sort);
-
         Page<ProductCategory> page = productCategoryRepository.findAll(pageable);
-
         List<ProductCategoryResponseDTO> dtoList = mergeProductCategories(page.getContent());
+        return wrapInPageableResponse(dtoList, pageable, page.getTotalElements());
+    }
 
-        Page<ProductCategoryResponseDTO> dtoPage = new PageImpl<>(dtoList, pageable, page.getTotalElements());
+    @Override
+    @Transactional
+    public APIPageableResponseDTO<ProductResponseDTO> getProductsByCategory(
+            Integer categoryId, int pageNo, int pageSize, String sortField) {
+
+        Pageable pageable = PageRequest.of(pageNo, pageSize); // sorting will be manual
+        Page<ProductCategory> page = productCategoryRepository.findAllByCategory_Id(categoryId, pageable);
+
+        List<ProductResponseDTO> dtoList = page.getContent().stream()
+                .map(pc -> {
+                    Product product = pc.getProduct();
+                    return ProductResponseDTO.builder()
+                            .id(product.getId())
+                            .name(product.getName())
+                            .description(product.getDescription())
+                            .price(product.getPrice())
+                            .image(product.getImage())
+                            .featured(product.getFeatured())
+                            .createOn(product.getCreateOn())
+                            .lastUpdateOn(product.getLastUpdateOn())
+                            .averageRating(ratingService.calculateAverageRating(product.getId()))
+                            .build();
+                })
+                .distinct()
+                .collect(Collectors.toList());
+
+        // Manual sorting
+        switch (sortField) {
+            case SORTFIELD_PRICE -> dtoList.sort(Comparator.comparing(ProductResponseDTO::getPrice));
+            case SORTFIELD_PRICE_DESC -> dtoList.sort(Comparator.comparing(ProductResponseDTO::getPrice).reversed());
+            case SORTFIELD_RATING -> dtoList.sort((a, b) -> Double.compare(
+                    b.getAverageRating() != null ? b.getAverageRating() : 0.0,
+                    a.getAverageRating() != null ? a.getAverageRating() : 0.0
+            ));
+            case SORTFIELD_DEFAULT -> dtoList.sort(Comparator.comparing(ProductResponseDTO::getCreateOn).reversed());
+            default -> {}
+        }
+
+        int start = Math.min(pageNo * pageSize, dtoList.size());
+        int end = Math.min(start + pageSize, dtoList.size());
+        List<ProductResponseDTO> paginatedList = dtoList.subList(start, end);
+
+        Page<ProductResponseDTO> dtoPage = new PageImpl<>(paginatedList, pageable, dtoList.size());
         return new APIPageableResponseDTO<>(dtoPage);
-    }
-
-    private Pageable createPageable(int pageNo, int pageSize, String sort) {
-        return PageRequest.of(pageNo, pageSize, Sort.by(sort).ascending());
-    }
-
-    private List<ProductCategoryResponseDTO> mergeProductCategories(List<ProductCategory> productCategories) {
-        Map<Integer, ProductCategoryResponseDTO> productMap = new HashMap<>();
-
-        productCategories.forEach(productCategory -> {
-            int productId = productCategory.getProduct().getId();
-
-            productMap.computeIfAbsent(productId, id -> {
-                ProductCategoryResponseDTO dto = ProductCategoryMapper.productCategoryToDTO(productCategory);
-                dto.setCategories(new ArrayList<>()); // Reset to avoid duplicate first category
-                return dto;
-            });
-
-            productMap.get(productId).getCategories().add(CategoryResponseDTO.builder()
-                    .id(productCategory.getCategory().getId())
-                    .name(productCategory.getCategory().getName())
-                    .description(productCategory.getCategory().getDescription())
-                    .build());
-        });
-
-        return new ArrayList<>(productMap.values());
     }
 
 
@@ -117,19 +135,54 @@ public class ProductCategoryServiceImpl implements ProductCategoryService {
             throw new ProductCategoryNotFoundException();
         }
 
-        ProductCategoryResponseDTO responseDTO = ProductCategoryMapper.productCategoryToDTO(productCategories.get(0));
-
-        List<CategoryResponseDTO> categories = productCategories.stream()
-                .map(pc -> CategoryResponseDTO.builder()
-                        .id(pc.getCategory().getId())
-                        .name(pc.getCategory().getName())
-                        .description(pc.getCategory().getDescription())
-                        .build())
-                .toList();
-
-        responseDTO.setCategories(categories);
-
-        return responseDTO;
+        ProductCategoryResponseDTO dto = ProductCategoryMapper.productCategoryToDTO(productCategories.getFirst());
+        dto.setCategories(productCategories.stream()
+                .map(this::mapCategoryToDTO)
+                .collect(Collectors.toList()));
+        return dto;
     }
 
+
+    private Pageable createPageable(int pageNo, int pageSize, String sort) {
+        return PageRequest.of(pageNo, pageSize, Sort.by(sort).ascending());
+    }
+
+    private APIPageableResponseDTO<ProductCategoryResponseDTO> wrapInPageableResponse(List<ProductCategoryResponseDTO> dtoList, Pageable pageable, long total) {
+        Page<ProductCategoryResponseDTO> dtoPage = new PageImpl<>(dtoList, pageable, total);
+        return new APIPageableResponseDTO<>(dtoPage);
+    }
+
+    private List<ProductCategoryResponseDTO> mergeProductCategories(List<ProductCategory> productCategories) {
+        Map<Integer, ProductCategoryResponseDTO> productMap = new HashMap<>();
+
+        for (ProductCategory pc : productCategories) {
+            int productId = pc.getProduct().getId();
+
+            productMap.computeIfAbsent(productId, id -> {
+                ProductCategoryResponseDTO dto = ProductCategoryMapper.productCategoryToDTO(pc);
+                dto.setCategories(new ArrayList<>());
+                return dto;
+            });
+
+            productMap.get(productId).getCategories().add(mapCategoryToDTO(pc));
+        }
+
+        return new ArrayList<>(productMap.values());
+    }
+
+    private List<ProductCategoryResponseDTO> mapProductCategoriesFlat(List<ProductCategory> productCategories) {
+        return productCategories.stream().map(pc -> {
+            ProductCategoryResponseDTO dto = ProductCategoryMapper.productCategoryToDTO(pc);
+            dto.setCategories(List.of(mapCategoryToDTO(pc)));
+            return dto;
+        }).collect(Collectors.toList());
+    }
+
+    private CategoryResponseDTO mapCategoryToDTO(ProductCategory pc) {
+        return CategoryResponseDTO.builder()
+                .id(pc.getCategory().getId())
+                .name(pc.getCategory().getName())
+                .description(pc.getCategory().getDescription())
+                .build();
+    }
 }
